--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,12 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: lily58_left
+    shield: lily58_left nice_view_adapter nice_view
+    snippet: studio-rpc-usb-uart
+    make-args: -DCONFIG_ZMK_STUDIO=y
+    artifact-name: corne_left_with_studio
   - board: nice_nano_v2
-    shield: lily58_right
+    shield: lily58_right nice_view_adapter nice_view
+    snippet: studio-rpc-usb-uart
+    make-args: -DCONFIG_ZMK_STUDIO=y
+    artifact-name: corne_left_with_studio
