--- a/build.yaml
+++ b/build.yaml
@@ -23,9 +23,9 @@ include:
     shield: lily58_left nice_view_adapter nice_view
     snippet: studio-rpc-usb-uart
     make-args: -DCONFIG_ZMK_STUDIO=y
-    artifact-name: corne_left_with_studio
+    artifact-name: mtergosplit_left
   - board: nice_nano_v2
     shield: lily58_right nice_view_adapter nice_view
     snippet: studio-rpc-usb-uart
     make-args: -DCONFIG_ZMK_STUDIO=y
-    artifact-name: corne_left_with_studio
+    artifact-name: mtergosplit_right
