--- a/build.yaml
+++ b/build.yaml
@@ -20,12 +20,12 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: lily58_left nice_view_adapter nice_view
+    shield: mtergosplit_left nice_view_adapter nice_view
     snippet: studio-rpc-usb-uart
     make-args: -DCONFIG_ZMK_STUDIO=y
     artifact-name: mtergosplit_left
   - board: nice_nano_v2
-    shield: lily58_right nice_view_adapter nice_view
+    shield: mtergosplit_right nice_view_adapter nice_view
     snippet: studio-rpc-usb-uart
     make-args: -DCONFIG_ZMK_STUDIO=y
     artifact-name: mtergosplit_right
