--- a/config/boards/shields/mtergosplit/lily58.conf
+++ b/config/boards/shields/mtergosplit/lily58.conf
@@ -6,3 +6,7 @@ CONFIG_ZMK_SLEEP=y
 
 # ZMK Studio
 CONFIG_ZMK_STUDIO=y
+
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
