--- a/config/boards/shields/mtergosplit/lily58_left.conf
+++ b/config/boards/shields/mtergosplit/lily58_left.conf
@@ -1,4 +1,4 @@
-#  Reset nice!view to default widgets (horizontal view)
+#  Reset nice!view to default widgets (horizontal view) - Delete this if want portrait (vertical) layout
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
 CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
