--- a/build.yaml
+++ b/build.yaml
@@ -29,3 +29,5 @@ include:
     snippet: studio-rpc-usb-uart
     make-args: -DCONFIG_ZMK_STUDIO=y
     artifact-name: mtergosplit_right
+  - board: nice_nano_v2
+    shield: settings_reset
