--- a/config/boards/shields/mtergosplit/lily58.dtsi
+++ b/config/boards/shields/mtergosplit/lily58.dtsi
@@ -10,26 +10,26 @@
         compatible = "zmk,kscan-gpio-matrix";
         diode-direction = "col2row";
 
-        row-gpios = <&pro_micro 18 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
-                    <&pro_micro 15 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
-                    <&pro_micro 14 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
-                    <&pro_micro 16 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
-                    <&pro_micro 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
+        row-gpios = <&pro_micro 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
+                    <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
+                    <&pro_micro 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
+                    <&pro_micro 8 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,
+                    <&pro_micro 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
     };
 
     left_encoder: encoder_left {
         compatible = "alps,ec11";
         steps = <24>;
-        a-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        b-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        a-gpios = <&pro_micro 0 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&pro_micro 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         status = "disabled";
     };
 
     right_encoder: encoder_right {
         compatible = "alps,ec11";
         steps = <24>;
-        a-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        b-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        a-gpios = <&pro_micro 0 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&pro_micro 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         status = "disabled";
     };
 
@@ -46,11 +46,11 @@
         columns = <16>;
 
         map = <
-                RC(0, 0) RC(0, 1) RC(0, 2) RC(0, 3) RC(0, 4) RC(0, 5)                                     RC(0, 10) RC(0, 11) RC(0, 12) RC(0, 13) RC(0, 14) RC(0, 15)
-                RC(1, 0) RC(1, 1) RC(1, 2) RC(1, 3) RC(1, 4) RC(1, 5) RC(1, 6)                   RC(1, 9) RC(1, 10) RC(1, 11) RC(1, 12) RC(1, 13) RC(1, 14) RC(1, 15)
-                RC(2, 0) RC(2, 1) RC(2, 2) RC(2, 3) RC(2, 4) RC(2, 5) RC(2, 6) RC(2, 7) RC(2, 8) RC(2, 9) RC(2, 10) RC(2, 11) RC(2, 12) RC(2, 13) RC(2, 14) RC(2, 15)
-                RC(3, 0) RC(3, 1) RC(3, 2) RC(3, 3) RC(3, 4) RC(3, 5)          RC(3, 7) RC(3, 8)          RC(3, 10) RC(3, 11) RC(3, 12) RC(3, 13) RC(3, 14) RC(3, 15)
-                                                    RC(4, 4) RC(4, 5) RC(4, 6) RC(4, 7) RC(4, 8) RC(4, 9) RC(4, 10) RC(4, 11) 
+                RC(0, 0) RC(0, 1) RC(0, 2) RC(0, 3) RC(0, 4) RC(0, 5) RC(0, 6) RC(0, 7) RC(0, 8) RC(0, 9) RC(0, 10) RC(0, 11) RC(0, 12) RC(0, 13) RC(0, 14)
+                RC(1, 0) RC(1, 1) RC(1, 2) RC(1, 3) RC(1, 4) RC(1, 5) RC(1, 6) RC(1, 7) RC(1, 8) RC(1, 9) RC(1, 10) RC(1, 11) RC(1, 12) RC(1, 13) RC(1, 14)
+                RC(2, 0) RC(2, 1) RC(2, 2) RC(2, 3) RC(2, 4) RC(2, 5)          RC(2, 7) RC(2, 8) RC(2, 9) RC(2, 10) RC(2, 11) RC(2, 12) RC(2, 13) RC(2, 14) 
+                RC(3, 0) RC(3, 1) RC(3, 2) RC(3, 3) RC(3, 4) RC(3, 5)          RC(3, 7) RC(3, 8) RC(3, 9) RC(3, 10) RC(3, 11) RC(3, 12) RC(3, 13)
+                         RC(4, 1) RC(4, 2) RC(4, 3) RC(4, 4) RC(4, 5)                   RC(4, 8) RC(4, 9) RC(4, 10) RC(4, 11) RC(4, 12) RC(4, 13) RC(4, 14)
         >;
     };
 
@@ -60,80 +60,75 @@
         transform = <&transform>;
         kscan = <&kscan>;
 
-    keys  //                     w   h     x    y       rot    rx    ry
-        //row 0 
-            = <&key_physical_attrs 150 100     0    50       0     0     0>  // ESC
-            , <&key_physical_attrs 100 100   150    50       0     0     0>  // 1 !
-            , <&key_physical_attrs 100 100   250    25       0     0     0>  // 2 @
-            , <&key_physical_attrs 100 100   350     0       0     0     0>  // 3 #
-            , <&key_physical_attrs 100 100   450    25       0     0     0>  // 4 $
-            , <&key_physical_attrs 100 100   550    50       0     0     0>  // 5 %
-            , <&key_physical_attrs 100 100  1300    50       0     0     0>  // 6 ^
-            , <&key_physical_attrs 100 100  1400    25       0     0     0>  // 7 &
-            , <&key_physical_attrs 100 100  1500     0       0     0     0>  // 8 *
-            , <&key_physical_attrs 100 100  1600    25       0     0     0>  // 9 left paren
-            , <&key_physical_attrs 100 100  1700    50       0     0     0>  // 0 right paren
-            , <&key_physical_attrs 100 100  1800    50       0     0     0>  // BKSP DEL
-
-        // row 1
-            , <&key_physical_attrs 150 100     0    150       0     0     0>  // TAB
-            , <&key_physical_attrs 100 100   150    150       0     0     0>  // Q
-            , <&key_physical_attrs 100 100   250    125       0     0     0>  // W
-            , <&key_physical_attrs 100 100   350    100       0     0     0>  // E
-            , <&key_physical_attrs 100 100   450    125       0     0     0>  // R
-            , <&key_physical_attrs 100 100   550    150       0     0     0>  // T
-            , <&key_physical_attrs 100 100   700    175       0     0     0>  // LEFT ROT ENC
-            , <&key_physical_attrs 100 100  1150    175       0     0     0>  // RIGHT ROT ENC   
-            , <&key_physical_attrs 100 100  1300    150       0     0     0>  // Y
-            , <&key_physical_attrs 100 100  1400    125       0     0     0>  // U
-            , <&key_physical_attrs 100 100  1500    100       0     0     0>  // I
-            , <&key_physical_attrs 100 100  1600    125       0     0     0>  // O
-            , <&key_physical_attrs 100 100  1700    150       0     0     0>  // P
-            , <&key_physical_attrs 100 100  1800    150       0     0     0>  // - _ = +
-
-        // row 2
-            , <&key_physical_attrs 150 100     0    250       0     0     0>  // SHIFT/CAPS
-            , <&key_physical_attrs 100 100   150    250       0     0     0>  // A
-            , <&key_physical_attrs 100 100   250    225       0     0     0>  // S
-            , <&key_physical_attrs 100 100   350    200       0     0     0>  // D
-            , <&key_physical_attrs 100 100   450    225       0     0     0>  // F
-            , <&key_physical_attrs 100 100   550    250       0     0     0>  // G
-            , <&key_physical_attrs 100 100   675    300       0     0     0>  // L ARROW
-            , <&key_physical_attrs 100 100   775    300       0     0     0>  // U ARROW
-            , <&key_physical_attrs 100 100  1075    300       0     0     0>  // D ARROW
-            , <&key_physical_attrs 100 100  1175    300       0     0     0>  // R ARROW                
-            , <&key_physical_attrs 100 100  1300    250       0     0     0>  // H
-            , <&key_physical_attrs 100 100  1400    225       0     0     0>  // J
-            , <&key_physical_attrs 100 100  1500    200       0     0     0>  // K
-            , <&key_physical_attrs 100 100  1600    225       0     0     0>  // L
-            , <&key_physical_attrs 100 100  1700    250       0     0     0>  // ; : ' "
-            , <&key_physical_attrs 100 100  1800    250       0     0     0>  // RETURN
-
-        // row 3
-            , <&key_physical_attrs 150 100     0    350       0     0     0>  // ` ~
-            , <&key_physical_attrs 100 100   150    350       0     0     0>  // Z
-            , <&key_physical_attrs 100 100   250    325       0     0     0>  // X
-            , <&key_physical_attrs 100 100   350    300       0     0     0>  // C
-            , <&key_physical_attrs 100 100   450    325       0     0     0>  // V
-            , <&key_physical_attrs 100 100   550    350       0     0     0>  // B
-            , <&key_physical_attrs 100 100   850    250    1500     0     0>  // L CTRL
-            , <&key_physical_attrs 100 100   925    750  (-1500)    0     0>  // R CTRL                
-            , <&key_physical_attrs 100 100  1300    350       0     0     0>  // N
-            , <&key_physical_attrs 100 100  1400    325       0     0     0>  // M
-            , <&key_physical_attrs 100 100  1500    300       0     0     0>  // , LT LBRKT LBRCE
-            , <&key_physical_attrs 100 100  1600    325       0     0     0>  // . GT RBRKT RBRCE
-            , <&key_physical_attrs 100 100  1700    350       0     0     0>  // SLASH ?
-            , <&key_physical_attrs 100 100  1800    350       0     0     0>  // SHIFT
-
-        // row 4
-            , <&key_physical_attrs 100 100  425     450       0     0     0> // L OPT
-            , <&key_physical_attrs 100 100  590     385     750     0     0> // L CMD
-            , <&key_physical_attrs 100 175  750     265    1500     0     0> // SPACE
-            , <&key_physical_attrs 100 100  850     350    1500     0     0> // RAISE RIGHT
-            , <&key_physical_attrs 100 100  925     850 (-1500)     0     0> // RAISE LEFT
-            , <&key_physical_attrs 100 175 1025     765 (-1500)     0     0> // SPACE
-            , <&key_physical_attrs 100 100 1240     650  (-750)     0     0> // R CMD
-            , <&key_physical_attrs 100 100 1425     465       0     0     0> // R OPT
+        keys  //                     w   h    x    y     rot    rx    ry
+            = <&key_physical_attrs 100 100    0    0       0     0     0>
+            , <&key_physical_attrs 100 100  100    0       0     0     0>
+            , <&key_physical_attrs 100 100  200    0       0     0     0>
+            , <&key_physical_attrs 100 100  300    0       0     0     0>
+            , <&key_physical_attrs 100 100  400    0       0     0     0>
+            , <&key_physical_attrs 100 100  500    0       0     0     0>
+            , <&key_physical_attrs 100 100  600    0       0     0     0>
+            , <&key_physical_attrs 100 100  725    0       0     0     0>
+            , <&key_physical_attrs 100 100  925    0       0     0     0>
+            , <&key_physical_attrs 100 100 1025    0       0     0     0>
+            , <&key_physical_attrs 100 100 1125    0       0     0     0>
+            , <&key_physical_attrs 100 100 1225    0       0     0     0>
+            , <&key_physical_attrs 100 100 1325    0       0     0     0>
+            , <&key_physical_attrs 100 100 1425    0       0     0     0>
+            , <&key_physical_attrs 100 100 1525    0       0     0     0>
+            , <&key_physical_attrs 150 100 1625    0       0     0     0>
+            , <&key_physical_attrs 150 100    0  100       0     0     0>
+            , <&key_physical_attrs 100 100  150  100       0     0     0>
+            , <&key_physical_attrs 100 100  250  100       0     0     0>
+            , <&key_physical_attrs 100 100  350  100       0     0     0>
+            , <&key_physical_attrs 100 100  450  100       0     0     0>
+            , <&key_physical_attrs 100 100  550  100       0     0     0>
+            , <&key_physical_attrs 100 100  725  100       0     0     0>
+            , <&key_physical_attrs 100 100  975  100       0     0     0>
+            , <&key_physical_attrs 100 100 1075  100       0     0     0>
+            , <&key_physical_attrs 100 100 1175  100       0     0     0>
+            , <&key_physical_attrs 100 100 1275  100       0     0     0>
+            , <&key_physical_attrs 100 100 1375  100       0     0     0>
+            , <&key_physical_attrs 100 100 1475  100       0     0     0>
+            , <&key_physical_attrs 100 100 1575  100       0     0     0>
+            , <&key_physical_attrs 100 100 1675  100       0     0     0>
+            , <&key_physical_attrs 175 100    0  200       0     0     0>
+            , <&key_physical_attrs 100 100  175  200       0     0     0>
+            , <&key_physical_attrs 100 100  275  200       0     0     0>
+            , <&key_physical_attrs 100 100  375  200       0     0     0>
+            , <&key_physical_attrs 100 100  475  200       0     0     0>
+            , <&key_physical_attrs 100 100  575  200       0     0     0>
+            , <&key_physical_attrs 100 100  725  200       0     0     0>
+            , <&key_physical_attrs 100 100 1000  200       0     0     0>
+            , <&key_physical_attrs 100 100 1100  200       0     0     0>
+            , <&key_physical_attrs 100 100 1200  200       0     0     0>
+            , <&key_physical_attrs 100 100 1300  200       0     0     0>
+            , <&key_physical_attrs 100 100 1400  200       0     0     0>
+            , <&key_physical_attrs 100 100 1500  200       0     0     0>
+            , <&key_physical_attrs 175 100 1600  200       0     0     0>
+            , <&key_physical_attrs 200 100    0  300       0     0     0>
+            , <&key_physical_attrs 100 100  200  300       0     0     0>
+            , <&key_physical_attrs 100 100  300  300       0     0     0>
+            , <&key_physical_attrs 100 100  400  300       0     0     0>
+            , <&key_physical_attrs 100 100  500  300       0     0     0>
+            , <&key_physical_attrs 100 100  600  300       0     0     0>
+            , <&key_physical_attrs 100 100  725  300       0     0     0>
+            , <&key_physical_attrs 100 100 1075  300       0     0     0>
+            , <&key_physical_attrs 100 100 1175  300       0     0     0>
+            , <&key_physical_attrs 100 100 1275  300       0     0     0>
+            , <&key_physical_attrs 100 100 1375  300       0     0     0>
+            , <&key_physical_attrs 100 100 1475  300       0     0     0>
+            , <&key_physical_attrs 200 100 1575  300       0     0     0>
+            , <&key_physical_attrs 100 100  150  435       0    50     0>
+            , <&key_physical_attrs 100 100 1395  450       0    50     0>
+            , <&key_physical_attrs 100 100  300  410     500     0     0>
+            , <&key_physical_attrs 100 100  450  375    1000     0     0>
+            , <&key_physical_attrs 100 175  625  200    2000     0     0>
+            , <&key_physical_attrs 100 175  725  200    2000     0     0>
+            , <&key_physical_attrs 100 175  725  775 (-2000)     0     0>
+            , <&key_physical_attrs 100 175  825  775 (-2000)     0     0>
+            , <&key_physical_attrs 100 100 1075  675 (-1000)     0     0>
+            , <&key_physical_attrs 100 100 1240  570  (-500)     0     0>
             ;
     };
 };
