--- a/build.yaml
+++ b/build.yaml
@@ -8,6 +8,10 @@ include:
     shield: lily58_right nice_view_adapter nice_view
     snippet: studio-rpc-usb-uart
     make-args: -DCONFIG_ZMK_STUDIO=y
-    artifact-name: mtergosplit_right  
+    artifact-name: mtergosplit_right
   - board: nice_nano_v2
     shield: settings_reset
+  - board: nice_nano_v2
+    shield: lily58_left
+  - board: nice_nano_v2
+    shield: lily58_right
